# CppTraining

./: CMakeLists.txt  Cpp_training_modules_1_2.pptx  README.md  cpp_training_module3.pptx  cpp_training_module4&5.pptx  cpp_training_module4.pptx
HW1/: Readme.md  ReservoirMassBalance1.cpp
HW2/: README.md  ReservoirMassBalance2.cpp
HW3/: Readme.md  ReservoirMassBalance3.cpp
HW3/WaterSources/: Reservoir.cpp  Reservoir.h  StorageInfrastructure.cpp  StorageInfrastructure.h
HW4/: Constants.h  README.md  ReservoirMassBalance4.cpp
HW4/Tests/: Tests.cpp
HW4/WaterSources/: OfflineStorage.cpp  OfflineStorage.h  Quarry.cpp  Quarry.h  Reservoir.cpp  Reservoir.h  StorageInfrastructure.cpp  StorageInfrastructure.h
